fix ratio on collapse

--- a/resources/assets/css/components/_collapse.scss
+++ b/resources/assets/css/components/_collapse.scss
@@ -3,10 +3,19 @@
 .collapse-inner {
   position: relative;
   border: 1px solid #ccc;
+  background-color: #fff;
   text-align: center;
   padding: 0 40px 10px;
   overflow: hidden;
   transition: max-height .3s ease-in-out;
+
+  @include max-screen($breakpoint-mobile) {
+    padding: 0 0 18px;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 
   // &.is-active {
   //   max-height: 700px;
